# customer-segmentation-engine

./: .gitignore  .pre-commit-config.yaml  README.md  customer-segmentation-engine-blueprint.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  refresh.yml
analysis/: methodology.md
app/: streamlit_app.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: _marts.yml  fct_rfm.sql
dbt/models/staging/: _staging.yml  stg_orders.sql
ingestion/: pipeline.py
src/segmentation/: __init__.py  cluster.py  config.py  features.py  io.py  main.py  profile.py
tests/: test_cluster.py  test_profile.py  test_rfm.py
warehouse/: customer_segments.parquet
