[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "dlt>=1.28.2",
    "duckdb>=1.5.4",
    "mypy>=1.19.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pandera>=0.32.1",
    "plotly>=6.9.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "streamlit>=1.59.1",
]

[tool.pytest.ini_options]
addopts = "--strict-markers -v"
testpaths = ["tests"]
pythonpath = "."

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

